# goto-async-rust-2018

./: Makefile  README.md  Timings.md  build.sh  outline.md  purity.xcf  rust-async.html  rust-async.md  rust-ffi.html  rust-ffi.md
code/: CMakeLists.txt  exceptions  ffi-examples.h  main.c  main.cpp
code/cpp_exception/: Cargo.toml  a.out  build.rs  rust.h  rust.h.gch  test.cpp
code/cpp_exception/native/: handle.c
code/cpp_exception/src/: lib.rs
code/ffi-examples/: Cargo.toml
code/ffi-examples/src/: lib.rs
code/vtables/: main  thing.cpp
code/vtables/thing/: Cargo.toml
code/vtables/thing/src/: lib.rs
examples/: NOTES  write_multithreaded.rs  write_to_file_and_close.rs  write_to_file_and_close_failing.rs
examples/read_stdin/: Cargo.toml
examples/read_stdin/src/: main.rs
exception/: a.out  bar.c  main.cpp
headers/: reverse-rs.h
template/: index.html
template/css/theme/: moon.css
