[package]
name = "cpp_exception"
description = "Binds to libc++ functions to allow Rust code to throw exceptions in FFI scenarios"
version = "0.1.0"
authors = ["Katharina Fey <kookie@spacekookie.de>"]
build = "build.rs"

[lib]
name = "exceptionrs"
crate-type = ["cdylib"]
# crate-type = ["staticlib"]

[build-dependencies]
gcc = "*"